# pyfilesystem2

./: .gitignore  CONTRIBUTING.md  Makefile  appveyor.yml  cspell.json  pyproject.toml  requirements.txt  setup.cfg.old  setup.cmd  tox.ini
.github/workflows/: package.yml  test.yml
docs/: Makefile  make.bat  portable.mk  requirements.txt
docs/source/: conf.py
docs/source/reference/: mountfs.rst
examples/: README.md  find_dups.py
fs/: __init__.py  _fscompat.py  base.py  ftpfs.py  glob.py  iotools.py  memoryfs.py  mountfs.py  multifs.py  osfs.py  path.py  tarfs.py  test.py  tools.py  walk.py  wrap.py  wrapfs.py
fs/opener/: __init__.py
tests/: requirements.txt  test_appfs.py  test_doctest.py  test_encoding.py  test_errors.py  test_filesize.py  test_ftpfs.py  test_glob.py  test_iotools.py  test_move.py  test_opener.py  test_osfs.py  test_tarfs.py  test_tree.py  test_wrap.py
