[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fs.*"
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "fs.test"
disallow_untyped_defs = false

[tool.isort]
default_section = "THIRDPARTY"
known_first_party = "fs"
known_standard_library = "sys, typing"
line_length = 88
profile = "black"
skip_gitignore = true

[tool.coverage]
[tool.coverage.run]
branch = true
omit = "fs/test.py"
source = "fs"
relative_files = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if False:",
    "it typing.TYPE_CHECKING:",
    "@typing.overload",
    "@overload",
]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
